clusters/pi-k3s/mtgibbs-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtgibbs-site
  namespace: mtgibbs-site
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - site.lab.mtgibbs.dev
      secretName: mtgibbs-site-tls
  rules:
    - host: site.lab.mtgibbs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mtgibbs-site
                port:
                  number: 3000
